# lightscript

./: CMakeLists.txt  TODO.txt
examples/: expr.ls  main.ls  new-test.ls  obj.ls  recursion.ls  run-test.ls
include/: lightscript.h
include/lightscript/: array.h  ast.h  defines.h  error.h  exec.h  function.h  interpreter.h  lexer.h  module.h  modules-build.h  node-stack.h  node.h  object.h  parser.h  settings.h  token-stack.h  token.h  typedefs.h  u8-stack.h  var-list.h  var-stack.h  var.h
src/: main.c
src/lightscript/: array.c  ast.c  error.c  exec.c  function.c  interpreter.c  lexer.c  module.c  node-stack.c  node.c  object.c  parser.c  settings.c  token-stack.c  token.c  u8-stack.c  var-list.c  var-stack.c  var.c
